--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -9,5 +9,4 @@ jobs:
       - name: pulling git repo
         uses: actions/checkout@v2
       - name: install something
-        run: sudo apt install somethings
-        
+        run: sudo apt update
