--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -6,7 +6,12 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - name: pulling git repo
-        uses: actions/checkout@v2
-      - name: install something
-        run: sudo apt update
+      - name: install python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.14"
+      - name: update pip
+        run: python -m pip install --upgrade pip
+      - name: install ll dependences
+        run: pip install -r requirements.txt
+        
