--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -13,5 +13,4 @@ jobs:
       - name: update pip
         run: python -m pip install --upgrade pip
       - name: install ll dependences
-        run: pip install -r requirements.txt
-        
+        run: pip install -r ./requirements.txt
