--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -13,4 +13,4 @@ jobs:
       - name: update pip
         run: python -m pip install --upgrade pip
       - name: install ll dependences
-        run: pip install -r ./requirements.txt
+        run: pip install -r C:\Users\stepa\Documents\vs_code_projects\API\requirements.txt
