--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -6,11 +6,16 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
+      - name: pulling git repo
+        uses: actions/checkout@v2
+
       - name: install python
         uses: actions/setup-python@v2
         with:
           python-version: "3.14"
+
       - name: update pip
         run: python -m pip install --upgrade pip
+
       - name: install ll dependences
-        run: pip install -r C:\Users\stepa\Documents\vs_code_projects\API\requirements.txt
+        run: pip install -r requirements.txt
