--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -3,17 +3,19 @@ name: Build and deploy code
 on: [push, pull_request]   
 
 jobs:
-  job1:
+  build:
     env:
-      DATABASE_HOSTNAME: localhost
-      DATABASE_PORT: 5432
-      DATABASE_PASSWORD: 12345
+      DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
+      DATABASE_PORT: ${{secrets.DATABASE_PORT}}
+      DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
       DATABASE_NAME: fastapi
       DATABASE_USERNAME: postgres
       SECRET_KEY: "abc"
       ALGORITHM: "HS256"
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
+
     runs-on: ubuntu-latest
+
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
@@ -32,6 +34,23 @@ jobs:
       - name: pytests
         run: |
           pip install pytest
-          pytest
+          pytest  
 
-          
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    environment:
+      name: production
+    
+    steps:
+      - name: deploy to ubuntu
+        uses: appleboy/ssh-action@master
+        with:
+          host: 100.76.67.39
+          username: stefan
+          password: s
+          port : 6996
+          script: |
+            cd app/api
+            git pull 
+            sudo systemctl restart api 
