--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -2,20 +2,22 @@ name: Build and deploy code
 
 on: [push, pull_request]   
 
+name: Build and deploy code
+
+on: [push, pull_request]   
+
 jobs:
   build:
     env:
-      DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
-      DATABASE_PORT: ${{secrets.DATABASE_PORT}}
-      DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
+      DATBASE_HOSTNAME: localhost
+      DATABASE_PORT: 5432
+      DATABASE_PASSWORD: 12345
       DATABASE_NAME: fastapi
       DATABASE_USERNAME: postgres
       SECRET_KEY: "abc"
       ALGORITHM: "HS256"
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
-
     runs-on: ubuntu-latest
-
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
@@ -34,7 +36,8 @@ jobs:
       - name: pytests
         run: |
           pip install pytest
-          pytest  
+          pytest
+ 
 
   deploy:
     runs-on: ubuntu-latest
@@ -54,3 +57,6 @@ jobs:
             cd app/api
             git pull 
             echo s | sudo -S systemctl restart api 
+
+
+
