--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -45,7 +45,7 @@ jobs:
       - name: Connect to Tailscale
         uses: tailscale/github-action@v2
         with:
-          oauth-client-id: ktnm9dqPcg11CNTRL
+          oauth-client-id: kGN1BJ6WmZ11CNTRL
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
           tags: tag:ci
 
