--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -45,9 +45,10 @@ jobs:
       - name: Connect to Tailscale
         uses: tailscale/github-action@v2
         with:
-          oauth-client-id: kGN1BJ6WmZ11CNTRL
-          oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
-          tags: tag:ci
+          # oauth-client-id: kGN1BJ6WmZ11CNTRL
+          # oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
+          # tags: tag:ci
+          authkey: ${{ secrets.AUTH_KEY }}
 
       - name: deploy to ubuntu
         uses: appleboy/ssh-action@master
