--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -48,7 +48,7 @@ jobs:
           # oauth-client-id: kGN1BJ6WmZ11CNTRL
           # oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
           # tags: tag:ci
-          authkey: ${{ secrets.AUTH_KEY2 }}
+          authkey: ${{ secrets.AUTH_KEY }}
 
       - name: deploy to ubuntu
         uses: appleboy/ssh-action@master
