--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -21,12 +21,12 @@ jobs:
       - name: install python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.11"  # Fixed: 3.14 doesn't exist
+          python-version: "3.11"
 
       - name: update pip
         run: python -m pip install --upgrade pip
 
-      - name: install all dependencies  # Fixed typo
+      - name: install all dependencies
         run: pip install -r requirements.txt
       
       - name: pytests
@@ -37,36 +37,23 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
-  
+    
     steps:
       - name: Connect to Tailscale
         uses: tailscale/github-action@v2
         with:
-          authkey: ${{ secrets.AUTH_KEY }}
+          authkey: ${{ secrets.AUTH_KEY }}  # Changed from AUTH_KEY2
 
-      - name: Setup SSH
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
-        run: |
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts 2>/dev/null
-          
-          # Start ssh-agent
-          eval $(ssh-agent -s)
-          
-          # Add key with passphrase using expect
-          sudo apt-get update && sudo apt-get install -y expect
-          expect << EOF
-          spawn ssh-add ~/.ssh/id_rsa
-          expect "Enter passphrase"
-          send "$SSH_PASSPHRASE\r"
-          expect eof
-          EOF
-
-      - name: Deploy
-        run: |
-          ssh -p 6996 stefan@100.76.67.39 "cd app/api && git pull && echo '${{ secrets.SUDO_PASSWORD }}' | sudo -S systemctl restart api"
-          
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@master
+        with:
+          host: 100.76.67.39
+          username: stefan
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          port: 6996
+          script: |
+            cd app/api
+            git pull 
+            echo "${{ secrets.SUDO_PASSWORD }}" | sudo -S systemctl restart api
+            
