--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -38,44 +38,17 @@ jobs:
         with:
           authkey: ${{ secrets.AUTH_KEY }}
 
-      - name: Debug SSH key
+      - name: Setup SSH
         run: |
-          echo "Creating SSH key file..."
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          
-          echo "SSH key file info:"
-          ls -la ~/.ssh/id_rsa
-          echo ""
-          
-          echo "First line of key:"
-          head -n 1 ~/.ssh/id_rsa
-          echo ""
-          
-          echo "Last line of key:"
-          tail -n 1 ~/.ssh/id_rsa
-          echo ""
-          
-          echo "Key validation:"
-          ssh-keygen -y -f ~/.ssh/id_rsa -P "${{ secrets.SSH_PASSPHRASE }}" > /dev/null && echo "✓ Key is valid!" || echo "✗ Key is invalid or passphrase is wrong"
-
-      - name: Test SSH connection
-        run: |
           ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts 2>/dev/null
-          sshpass -p "${{ secrets.SSH_PASSPHRASE }}" ssh -v -i ~/.ssh/id_rsa -p 6996 stefan@100.76.67.39 "echo 'Connection successful!'" 2>&1 || true
-        continue-on-error: true
-      
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@master
-        with:
-          host: 100.76.67.39
-          username: stefan
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          port: 6996
-          script: |
+
+      - name: Deploy
+        run: |
+          ssh -T -o BatchMode=yes -i ~/.ssh/id_rsa -p 6996 stefan@100.76.67.39 << 'EOF'
             cd app/api
-            git pull 
+            git pull
             echo "${{ secrets.SUDO_PASSWORD }}" | sudo -S systemctl restart api
-            
+          EOF
