--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -38,14 +38,32 @@ jobs:
         with:
           authkey: ${{ secrets.AUTH_KEY }}
 
-      - name: Setup SSH Agent
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Add SSH known hosts
+      - name: Setup SSH with passphrase
         run: |
+          # Install sshpass
+          sudo apt-get update && sudo apt-get install -y sshpass expect
+          
+          # Setup SSH key
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          
+          # Add to known hosts
           ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts
+          
+          # Start ssh-agent
+          eval $(ssh-agent -s)
+          
+          # Add key with passphrase using expect
+          expect << 'EXPECT_SCRIPT'
+          set timeout 10
+          spawn ssh-add /home/runner/.ssh/id_rsa
+          expect "Enter passphrase"
+          send "$env(SSH_PASSPHRASE)\r"
+          expect eof
+          EXPECT_SCRIPT
+        env:
+          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
 
       - name: Deploy
         run: |
