--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -47,48 +47,51 @@ jobs:
           printf '%s\n' "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-          # derive public key and fingerprint for comparison with server's authorized_keys
-          ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub || true
-          echo "=== local key fingerprint ==="
-          ssh-keygen -lf ~/.ssh/id_rsa.pub || true
+          # try to derive public key (will fail if passphrase is wrong)
+          if ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub 2>/dev/null; then
+            echo "=== local key fingerprint ==="
+            ssh-keygen -lf ~/.ssh/id_rsa.pub || true
+          else
+            echo "=== ERROR: could not derive public key (likely wrong passphrase or corrupted private key) ==="
+            echo "Check SECRET: SSH_PRIVATE_KEY contains the full private key, and SSH_PASSPHRASE matches its passphrase."
+          fi
 
-          # known hosts
-          ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts
+          # collect host key(s)
+          ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts || true
 
           # start agent
           eval "$(ssh-agent -s)"
 
-          # If passphrase is empty, add key directly; otherwise use expect with absolute path
+          # add key: if no passphrase provided, add directly; otherwise use expect.
           if [ -z "$SSH_PASSPHRASE" ]; then
-            echo "No passphrase provided — adding key directly"
-            ssh-add ~/.ssh/id_rsa || true
+            echo "No SSH_PASSPHRASE provided — trying direct ssh-add"
+            ssh-add ~/.ssh/id_rsa || echo "ssh-add failed (private key may be encrypted or invalid)"
           else
-            echo "Passphrase provided — using expect to add key"
+            echo "Using expect to provide passphrase to ssh-add"
             expect <<'EXPECT_SCRIPT'
-              set timeout 20
-              # use env HOME to build absolute path (spawn does not expand ~)
-              set keyfile "$env(HOME)/.ssh/id_rsa"
-              spawn ssh-add $keyfile
-              expect {
-                -re "Enter passphrase" {
-                  send "$env(SSH_PASSPHRASE)\r"
-                  exp_continue
-                }
-                eof
-              }
-            EXPECT_SCRIPT
+      set timeout 20
+      set keyfile "$env(HOME)/.ssh/id_rsa"
+      spawn ssh-add $keyfile
+      expect {
+        -re "Enter passphrase" {
+          send "$env(SSH_PASSPHRASE)\r"
+          exp_continue
+        }
+        eof
+      }
+      EXPECT_SCRIPT
           fi
 
-          echo "=== ssh-agent keys ==="
+          echo "=== ssh-agent identities (ssh-add -l) ==="
           ssh-add -l || true
 
-          echo "=== trying verbose SSH (will print why auth failed) ==="
-          # force use of this key only and get detailed debug
+          echo "=== verbose ssh attempt (shows offered keys / server response) ==="
           ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -o PubkeyAuthentication=yes -o BatchMode=yes -p 6996 -vvv stefan@100.76.67.39 "echo CONNECTED" || true
 
-          # If publickey worked, do the real deploy (non-verbose)
+          echo "=== final deploy (if auth succeeded) ==="
           ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -p 6996 stefan@100.76.67.39 \
-            "cd app/api && git pull && echo \"${SUDO_PASSWORD}\" | sudo -S systemctl restart api"
+            "cd app/api && git pull && echo \"${SUDO_PASSWORD}\" | sudo -S systemctl restart api" || true
         env:
           SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
           SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
+          
