--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -39,58 +39,52 @@ jobs:
           authkey: ${{ secrets.AUTH_KEY }}
 
       - name: Setup SSH and Deploy (debug)
+        env:
+          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
+          SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
         run: |
           sudo apt-get update && sudo apt-get install -y expect openssh-client
 
           mkdir -p ~/.ssh
-          # write private key reliably (preserve newlines)
           printf '%s\n' "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
 
-          # try to derive public key (will fail if passphrase is wrong)
           if ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub 2>/dev/null; then
             echo "=== local key fingerprint ==="
             ssh-keygen -lf ~/.ssh/id_rsa.pub || true
           else
-            echo "=== ERROR: could not derive public key (likely wrong passphrase or corrupted private key) ==="
-            echo "Check SECRET: SSH_PRIVATE_KEY contains the full private key, and SSH_PASSPHRASE matches its passphrase."
+            echo "=== ERROR: could not derive public key ==="
+            echo "Check SSH_PRIVATE_KEY and SSH_PASSPHRASE secrets."
           fi
 
-          # collect host key(s)
           ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts || true
-
-          # start agent
           eval "$(ssh-agent -s)"
 
-          # add key: if no passphrase provided, add directly; otherwise use expect.
           if [ -z "$SSH_PASSPHRASE" ]; then
             echo "No SSH_PASSPHRASE provided — trying direct ssh-add"
-            ssh-add ~/.ssh/id_rsa || echo "ssh-add failed (private key may be encrypted or invalid)"
+            ssh-add ~/.ssh/id_rsa || echo "ssh-add failed"
           else
             echo "Using expect to provide passphrase to ssh-add"
-            expect <<'EXPECT_SCRIPT'
-            set timeout 20
-            set keyfile "$env(HOME)/.ssh/id_rsa"
-            spawn ssh-add $keyfile
-            expect {
-              -re "Enter passphrase" {
-                send "$env(SSH_PASSPHRASE)\r"
-                exp_continue
-              }
-              eof
+            expect << 'EXPECT_SCRIPT'
+          set timeout 20
+          set keyfile "$env(HOME)/.ssh/id_rsa"
+          spawn ssh-add $keyfile
+          expect {
+            -re "Enter passphrase" {
+              send "$env(SSH_PASSPHRASE)\r"
+              exp_continue
             }
-            EXPECT_SCRIPT
-                fi
+            eof
+          }
+          EXPECT_SCRIPT
+          fi
 
-                echo "=== ssh-agent identities (ssh-add -l) ==="
-                ssh-add -l || true
+          echo "=== ssh-agent identities ==="
+          ssh-add -l || true
 
-                echo "=== verbose ssh attempt (shows offered keys / server response) ==="
-                ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -o PubkeyAuthentication=yes -o BatchMode=yes -p 6996 -vvv stefan@100.76.67.39 "echo CONNECTED" || true
+          echo "=== verbose ssh attempt ==="
+          ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -o PubkeyAuthentication=yes -o BatchMode=yes -p 6996 -vvv stefan@100.76.67.39 "echo CONNECTED" || true
 
-                echo "=== final deploy (if auth succeeded) ==="
-                ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -p 6996 stefan@100.76.67.39 \
-                  "cd app/api && git pull && echo \"${SUDO_PASSWORD}\" | sudo -S systemctl restart api" || true
-              env:
-                SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
-                SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
+          echo "=== final deploy ==="
+          ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -p 6996 stefan@100.76.67.39 \
+            "cd app/api && git pull && echo \"${SUDO_PASSWORD}\" | sudo -S systemctl restart api" || true
