--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -87,4 +87,4 @@ jobs:
 
           echo "=== final deploy ==="
           ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -p 6996 stefan@100.76.67.39 \
-            "cd app/api && git pull && echo \"${SUDO_PASSWORD}\" | sudo -S systemctl restart api" || true
+            "cd app/api && git pull && echo \"${SUDO_PASSWORD}\" | sudo -S systemctl restart fastapi" || true
