--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -38,53 +38,25 @@ jobs:
         with:
           authkey: ${{ secrets.AUTH_KEY }}
 
-      - name: Setup SSH and Deploy (debug)
-        env:
-          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
-          SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
+      - name: Setup SSH and Deploy (secure)
+        # no SSH_PASSPHRASE / SUDO_PASSWORD required if you follow recommendations below
+        uses: actions/checkout@v3
+        # keep this step minimal and fail fast
+      - name: Start ssh-agent (load deploy key)
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Restore trusted host keys
         run: |
-          sudo apt-get update && sudo apt-get install -y expect openssh-client
-
+          set -euo pipefail
           mkdir -p ~/.ssh
-          printf '%s\n' "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          printf '%s\n' "${{ secrets.SERVER_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
+          chmod 600 ~/.ssh/known_hosts
 
-          if ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub 2>/dev/null; then
-            echo "=== local key fingerprint ==="
-            ssh-keygen -lf ~/.ssh/id_rsa.pub || true
-          else
-            echo "=== ERROR: could not derive public key ==="
-            echo "Check SSH_PRIVATE_KEY and SSH_PASSPHRASE secrets."
-          fi
-
-          ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts || true
-          eval "$(ssh-agent -s)"
-
-          if [ -z "$SSH_PASSPHRASE" ]; then
-            echo "No SSH_PASSPHRASE provided — trying direct ssh-add"
-            ssh-add ~/.ssh/id_rsa || echo "ssh-add failed"
-          else
-            echo "Using expect to provide passphrase to ssh-add"
-            expect << 'EXPECT_SCRIPT'
-          set timeout 20
-          set keyfile "$env(HOME)/.ssh/id_rsa"
-          spawn ssh-add $keyfile
-          expect {
-            -re "Enter passphrase" {
-              send "$env(SSH_PASSPHRASE)\r"
-              exp_continue
-            }
-            eof
-          }
-          EXPECT_SCRIPT
-          fi
-
-          echo "=== ssh-agent identities ==="
-          ssh-add -l || true
-
-          echo "=== verbose ssh attempt ==="
-          ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -o PubkeyAuthentication=yes -o BatchMode=yes -p 6996 -vvv stefan@100.76.67.39 "echo CONNECTED" || true
-
-          echo "=== final deploy ==="
-          ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -p 6996 stefan@100.76.67.39 \
-            "cd app/api && git pull && echo \"${SUDO_PASSWORD}\" | sudo -S systemctl restart fastapi" || true
+      - name: Deploy to server
+        run: |
+          set -euo pipefail
+          # strict host checking prevents MITM; agent provides the key
+          ssh -o StrictHostKeyChecking=yes -o IdentitiesOnly=yes -p 6996 stefan@100.76.67.39 \
+            'cd app/api && git pull && sudo systemctl restart fastapi'
