--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -1,57 +1,51 @@
 name: Build and deploy code
-on: [push, pull_request]   
+on: [push, pull_request]
+
+env:
+  DATABASE_HOSTNAME: localhost
+  DATABASE_PORT: 5432
+  DATABASE_PASSWORD: 12345
+  DATABASE_NAME: fastapi
+  DATABASE_USERNAME: postgres
+  SECRET_KEY: "abc"
+  ALGORITHM: "HS256"
+  ACCESS_TOKEN_EXPIRE_MINUTES: 30
+
 jobs:
   build:
-    env:
-      DATABASE_HOSTNAME: localhost
-      DATABASE_PORT: 5432
-      DATABASE_PASSWORD: 12345
-      DATABASE_NAME: fastapi
-      DATABASE_USERNAME: postgres
-      SECRET_KEY: "abc"
-      ALGORITHM: "HS256"
-      ACCESS_TOKEN_EXPIRE_MINUTES: 30
     runs-on: ubuntu-latest
     steps:
-      - name: pulling git repo
-        uses: actions/checkout@v2
-      - name: install python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
         with:
           python-version: "3.11"
-      - name: update pip
-        run: python -m pip install --upgrade pip
-      - name: install all dependencies
-        run: pip install -r requirements.txt
-      - name: pytests
-        run: |
-          pip install pytest
+      - run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt pytest
           pytest
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [build]
-    
+    needs: build
     steps:
-      - name: Connect to Tailscale
-        uses: tailscale/github-action@v2
+      - uses: tailscale/github-action@v2
         with:
           authkey: ${{ secrets.AUTH_KEY }}
-
+      
       - name: Deploy via SSH
         env:
-          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
-          SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
+          KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          PASS: ${{ secrets.SSH_PASSPHRASE }}
+          SUDO: ${{ secrets.SUDO_PASSWORD }}
         run: |
-          mkdir -p ~/.ssh && chmod 700 ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
-          chmod 600 ~/.ssh/deploy_key
-          ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts 2>/dev/null
-          
-          # Use sshpass for password + key with passphrase
-          sudo apt-get install -y sshpass
-          
-          sshpass -p "${SSH_PASSPHRASE}" ssh -i ~/.ssh/deploy_key \
-            -o StrictHostKeyChecking=accept-new \
-            -p 6996 stefan@100.76.67.39 \
-            "cd app/api && git pull && echo '${SUDO_PASSWORD}' | sudo -S systemctl restart fastapi"
+          sudo apt-get install -y expect openssh-client
+          mkdir -p ~/.ssh && echo "$KEY" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts
+          eval "$(ssh-agent -s)"
+          expect << 'EOF'
+          spawn ssh-add $env(HOME)/.ssh/id_rsa
+          expect "passphrase" { send "$env(PASS)\r" }
+          expect eof
+          EOF
+          ssh -i ~/.ssh/id_rsa -p 6996 stefan@100.76.67.39 \
+            "cd app/api && git pull && echo '${SUDO}' | sudo -S systemctl restart fastapi"
