--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -28,9 +28,28 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: tailscale/github-action@v2
+      - name: Connect to Tailscale
+        uses: tailscale/github-action@v2
         with:
           authkey: ${{ secrets.AUTH_KEY }}
+      
+      - name: Wait for Tailscale connection
+        run: |
+          echo "Waiting for Tailscale to establish connection..."
+          for i in {1..30}; do
+            if ping -c 1 -W 2 100.76.67.39 > /dev/null 2>&1; then
+              echo "Tailscale connection established!"
+              break
+            fi
+            echo "Attempt $i: Waiting for connection..."
+            sleep 2
+          done
+          
+          # Verify connection
+          if ! ping -c 1 -W 2 100.76.67.39 > /dev/null 2>&1; then
+            echo "Failed to establish Tailscale connection"
+            exit 1
+          fi
       
       - name: Deploy via SSH
         uses: appleboy/ssh-action@master
@@ -40,6 +59,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           port: 6996
+          command_timeout: 10m
           script: |
             cd app/api
             git pull
