--- a/.github/workflows/build.deploy.yaml
+++ b/.github/workflows/build.deploy.yaml
@@ -13,78 +13,31 @@ jobs:
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
     runs-on: ubuntu-latest
     steps:
-      - name: pulling git repo
-        uses: actions/checkout@v2
-      - name: install python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
         with:
           python-version: "3.11"
-      - name: update pip
-        run: python -m pip install --upgrade pip
-      - name: install all dependencies
-        run: pip install -r requirements.txt
-      - name: pytests
-        run: |
+      - run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install pytest
           pytest
 
   deploy:
     runs-on: ubuntu-latest
     needs: [build]
-    
     steps:
-      - name: Connect to Tailscale
-        uses: tailscale/github-action@v2
+      - uses: tailscale/github-action@v2
         with:
           authkey: ${{ secrets.AUTH_KEY }}
-
-      - name: Setup SSH and Deploy (debug)
-        env:
-          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
-          SUDO_PASSWORD: ${{ secrets.SUDO_PASSWORD }}
+      
+      - name: Deploy
         run: |
-          sudo apt-get update && sudo apt-get install -y expect openssh-client
-
           mkdir -p ~/.ssh
-          printf '%s\n' "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-
-          if ssh-keygen -y -f ~/.ssh/id_rsa > ~/.ssh/id_rsa.pub 2>/dev/null; then
-            echo "=== local key fingerprint ==="
-            ssh-keygen -lf ~/.ssh/id_rsa.pub || true
-          else
-            echo "=== ERROR: could not derive public key ==="
-            echo "Check SSH_PRIVATE_KEY and SSH_PASSPHRASE secrets."
-          fi
-
-          ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts || true
-          eval "$(ssh-agent -s)"
-
-          if [ -z "$SSH_PASSPHRASE" ]; then
-            echo "No SSH_PASSPHRASE provided — trying direct ssh-add"
-            ssh-add ~/.ssh/id_rsa || echo "ssh-add failed"
-          else
-            echo "Using expect to provide passphrase to ssh-add"
-            expect << 'EXPECT_SCRIPT'
-          set timeout 20
-          set keyfile "$env(HOME)/.ssh/id_rsa"
-          spawn ssh-add $keyfile
-          expect {
-            -re "Enter passphrase" {
-              send "$env(SSH_PASSPHRASE)\r"
-              exp_continue
-            }
-            eof
-          }
-          EXPECT_SCRIPT
-          fi
-
-          echo "=== ssh-agent identities ==="
-          ssh-add -l || true
-
-          echo "=== verbose ssh attempt ==="
-          ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -o PubkeyAuthentication=yes -o BatchMode=yes -p 6996 -vvv stefan@100.76.67.39 "echo CONNECTED" || true
-
-          echo "=== final deploy ==="
-          ssh -i ~/.ssh/id_rsa -o IdentitiesOnly=yes -p 6996 stefan@100.76.67.39 \
-            "cd app/api && git pull && echo \"${SUDO_PASSWORD}\" | sudo -S systemctl restart fastapi" || true
+          ssh-keyscan -p 6996 100.76.67.39 >> ~/.ssh/known_hosts
+          
+          ssh -i ~/.ssh/id_rsa -p 6996 stefan@100.76.67.39 \
+            "cd app/api && git pull && echo '${{ secrets.SUDO_PASSWORD }}' | sudo -S systemctl restart fastapi"
+            
